[package]
name = "tide_web"
version = "0.1.3"
authors = ["Daniel <qiuzhanghua@icloud.com>"]
edition = "2018"

[dependencies]
tide = "0.9"
async-std = { version = "1.6", features = ["attributes"] }
http-types = "2"
log = "0.4.8"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
lazy_static = "1.4"
dotenv = "0.15"
cfg-if = "0.1"
r2d2 = "0.8"
r2d2_redis = "0.13"
async-trait = "0.1"

mysql = "18"

sqlx-core = { version = "0.3", default-features = false, features = [ "runtime-async-std"] }
[dependencies.sqlx]
version = "0.3"
default-features = false
features = [ "runtime-async-std", "macros", "postgres", "mysql", "sqlite",  "uuid", "chrono", "bigdecimal", "json", "ipnetwork", "tls"]
